# ss-decoding

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  activations.py  dump_acts_l4.py  environment.yml  eval_accept.py  fit_lsq.py  hello.py  manual_run_activations.py  pyproject.toml  specdecoding.py  train_actmaping.py  weekly.md
full_sweep/: dump.py  dump_all.py  eval.py  eval_all_layers.py  eval_one.py  fit.py  fit_lsq.py  quick_fit_l12.py  quick_sweep_launcher.py  run.py  run_sweep.sh  sweep.yaml  utils.py
full_sweep/logs/: l0.out  l12.out  l16.out  l20.out  l24.out  l28.out  l4.out  l8.out
infra/: h100-new.yaml  selfspec.yaml
lsq_data/: accept_rate_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15_16_17_18_19_20_21_22_23_24_25_26_27_28_29_30_31_32_33_34_35_36_37_38_39_40_41_42_43_44_45_46_47_48_n10.json  accept_rate_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15_16_17_18_19_20_21_22_23_24_25_26_27_28_29_30_31_32_33_34_35_36_37_38_39_40_41_42_43_44_45_46_47_48_n10000.json  accept_rate_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15_16_17_18_19_20_21_22_23_24_25_26_27_28_29_30_31_32_33_34_35_36_37_38_39_40_41_42_43_44_45_46_47_48_n10_c.json  accept_rate_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15_16_17_18_19_20_21_22_23_24_25_26_27_28_29_30_31_32_33_34_35_36_37_38_39_40_41_42_43_44_45_46_47_48_n20000_c.json
scripts/: activations.py  bench.sh  gather_outs.py  manual_run_activations.py  manual_run_each_layer.py  prefetch_model.py  smoke_test.py  train.py  train_actmaping.py
