[project]
name = "ss-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "gnureadline>=8.2.13",
    "ipython>=9.1.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
