[project]
name = "inferenceoptimization-ssd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "matplotlib>=3.10.3",
    "skypilot>=0.8.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
