[project]
name = "inferenceoptimization-ssd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "flash-attn>=2.7.4.post1",
    "huggingface-hub>=0.31.2",
    "skypilot>=0.8.1",
    "vllm>=0.8.5.post1",
]
